{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 20,
  "lineage": "4439d76a-11ef-5028-524c-d480da9b05b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:807919226160:instance/i-051ed940c7a9d7cba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051ed940c7a9d7cba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0142c5491bb7ef223"
              }
            ],
            "primary_network_interface_id": "eni-0142c5491bb7ef223",
            "private_dns": "ip-10-0-1-93.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-18-227-48-75.us-east-2.compute.amazonaws.com",
            "public_ip": "18.227.48.75",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-009e3b52ac0624e21",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2996fc89d05ebaf",
            "tags": {
              "Name": "terra-workflow-web"
            },
            "tags_all": {
              "Name": "terra-workflow-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03784f1d68a660178"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "807919226160",
            "id": "i-051ed940c7a9d7cba",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807919226160:internet-gateway/igw-09e7cb3237cec8d6f",
            "id": "igw-09e7cb3237cec8d6f",
            "owner_id": "807919226160",
            "region": "us-east-2",
            "tags": {
              "Name": "terra-workflow-igw"
            },
            "tags_all": {
              "Name": "terra-workflow-igw"
            },
            "vpc_id": "vpc-0e4df53123ef34898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807919226160:route-table/rtb-0a5f5a20f274a5f58",
            "id": "rtb-0a5f5a20f274a5f58",
            "owner_id": "807919226160",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e7cb3237cec8d6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-workflow-public-rt"
            },
            "tags_all": {
              "Name": "terra-workflow-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4df53123ef34898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "807919226160",
            "id": "rtb-0a5f5a20f274a5f58",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c651b797277ffa3",
            "region": "us-east-2",
            "route_table_id": "rtb-0a5f5a20f274a5f58",
            "subnet_id": "subnet-0b2996fc89d05ebaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807919226160:security-group/sg-03784f1d68a660178",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03784f1d68a660178",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-workflow-ssh-sg",
            "name_prefix": "",
            "owner_id": "807919226160",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-workflow-ssh-sg"
            },
            "tags_all": {
              "Name": "terra-workflow-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4df53123ef34898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "807919226160",
            "id": "sg-03784f1d68a660178",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807919226160:subnet/subnet-0b2996fc89d05ebaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2996fc89d05ebaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "807919226160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "terra-workflow-public-subnet"
            },
            "tags_all": {
              "Name": "terra-workflow-public-subnet"
            },
            "vpc_id": "vpc-0e4df53123ef34898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "807919226160",
            "id": "subnet-0b2996fc89d05ebaf",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807919226160:vpc/vpc-0e4df53123ef34898",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da8d510d5d95fbff",
            "default_route_table_id": "rtb-0819b162cb5ff1cee",
            "default_security_group_id": "sg-069d36840ee6ff1e9",
            "dhcp_options_id": "dopt-0b67eebe165857068",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4df53123ef34898",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0819b162cb5ff1cee",
            "owner_id": "807919226160",
            "region": "us-east-2",
            "tags": {
              "Name": "terra-workflow-vpc"
            },
            "tags_all": {
              "Name": "terra-workflow-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "807919226160",
            "id": "vpc-0e4df53123ef34898",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}